unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Is_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Open__c</fullName>
    <description>Specifies if the record is Open for billing processes</description>
    <formula>ISPICKVAL(Status__c, &quot;Open&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specifies if the record is Open for billing processes</inlineHelpText>
    <label>Is Open</label>
    <type>Checkbox</type>
</CustomField>