unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Line_ID__c</fullName>
    <formula>Product_Configuration__r.Line_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line ID</label>
    <type>Text</type>
</CustomField>