unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Line_Item_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_PO_Number__c</fullName>
    <description>PO Number as defined in the Sales Order Line.</description>
    <inlineHelpText>PO Number as defined in the Sales Order Line.</inlineHelpText>
    <label>Line Item PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>