unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Manual_Hold__c.field-meta.xml
<CustomField>
    <fullName>Manual_Hold__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this line is under Manual Lock and must not be included in the billing process.</description>
    <inlineHelpText>Indicates if this line is under Manual Lock and must not be included in the billing process.</inlineHelpText>
    <label>Manual Hold?</label>
    <type>Checkbox</type>
</CustomField>