unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <description>Market as defined in the Sales Order.</description>
    <inlineHelpText>Market as defined in the Sales Order.</inlineHelpText>
    <label>Market</label>
    <length>50</length>
    <type>Text</type>
</CustomField>