unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Opportunity_Code__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code__c</fullName>
    <description>Displays Opportunity code</description>
    <formula>Opportunity__r.Opportunity_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays Opportunity code</inlineHelpText>
    <label>Opportunity Code</label>
    <type>Text</type>
</CustomField>