unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <description>Indicates the type of the Order which is used for pricing and for grouping orders into: Direct Commercial, Labels Commercial, Labels, AdCredit, House Guaranteed</description>
    <inlineHelpText>Indicates the type of the Order which is used for pricing and for grouping orders into: Direct Commercial, Labels Commercial, Labels, AdCredit, House Guaranteed</inlineHelpText>
    <label>Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct Commercial</fullName>
            </value>
            <value>
                <fullName>House Guaranteed</fullName>
            </value>
            <value>
                <fullName>House Non-Guaranteed</fullName>
            </value>
            <value>
                <fullName>Labels AdCredit</fullName>
            </value>
            <value>
                <fullName>Labels Commercial</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>