unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Payment Terms as defined in the Opportunity.</description>
    <inlineHelpText>Payment Terms as defined in the Opportunity.</inlineHelpText>
    <label>Payment Terms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>