unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <description>PO Number as defined in the Sales Order.</description>
    <inlineHelpText>PO Number as defined in the Sales Order.</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>