unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Product_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Product_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related Product Configuration (Sales Order Line)</description>
    <inlineHelpText>Link to the related Product Configuration (Sales Order Line)</inlineHelpText>
    <label>Product Configuration</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cscfga__Product_Configuration__c.Sales_Order__c</field>
            <operation>equals</operation>
            <valueField>$Source.Sales_Order__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cscfga__Product_Configuration__c</referenceTo>
    <relationshipLabel>Billing Schedule Item</relationshipLabel>
    <relationshipName>Billing_Schedule_Item</relationshipName>
    <type>Lookup</type>
</CustomField>