unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description>Product Name as defined in the Sales Order Line.</description>
    <inlineHelpText>Product Name as defined in the Sales Order Line.</inlineHelpText>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>