unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Ready_To_Close__c.field-meta.xml
<CustomField>
    <fullName>Ready_To_Close__c</fullName>
    <description>Field - Ready To Close based on Status = Ready and Exported_By_Mulesoft__c = true</description>
    <formula>IF( AND (CONTAINS(TEXT(Status__c),&#39;Ready&#39;),  Exported_By_Mulesoft__c = true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field - Ready To Close based on Status = Ready and Exported_By_Mulesoft__c = true</inlineHelpText>
    <label>Ready To Close</label>
    <type>Checkbox</type>
</CustomField>