unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Requires_Manual_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Manual_Reconciliation__c</fullName>
    <formula>Product_Configuration__r.Requires_Manual_Reconciliation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Manual Reconciliation</label>
    <type>Checkbox</type>
</CustomField>