unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Rev_Accrual_Agency_Fee_GL_Code__c.field-meta.xml
<CustomField>
    <fullName>Rev_Accrual_Agency_Fee_GL_Code__c</fullName>
    <description>Rev Accrual Agency Fee GL Code</description>
    <inlineHelpText>Rev Accrual Agency Fee GL Code</inlineHelpText>
    <label>Rev Accrual Agency Fee GL Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>