unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Sales_Order_Billing_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Billing_On_Hold__c</fullName>
    <description>Indicates that Sales Order should not be picked up by Integration because BSIs are not ready.</description>
    <formula>Billing_Schedule__r.CS_Sales_Order_Schedule__r.Sales_Order_Billing_On_Hold__c || Billing_Schedule__r.CS_Sales_Order_Schedule__r.Billing_Schedule_Items_Still_In_Pending__c ||
Billing_Schedule__r.CS_Sales_Order_Schedule__r.Open_After_Billing_Date__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates that Sales Order should not be picked up by Integration because BSIs are not ready.</inlineHelpText>
    <label>Sales Order Billing On Hold</label>
    <type>Checkbox</type>
</CustomField>