unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Scheduled_Amount__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Amount__c</fullName>
    <description>Formula is Unit Price * Scheduled Qty
Moving to Workflow.</description>
    <inlineHelpText>calculated as Unit Price * Scheduled Qty</inlineHelpText>
    <label>Scheduled Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>