unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Scheduled_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Quantity__c</fullName>
    <description>Scheduled Quantity is calculated as the pro-rata Contracted Quantity based on the Billing Start Period and Billing End Period for each Billing Schedule Line
Scheduled Quantity is calculated as an integer and adjustments to accommodate the pro-rata calculation are included on the last period</description>
    <inlineHelpText>Scheduled Quantity is calculated as the pro-rata Contracted Quantity based on the Billing Start Period and Billing End Period for each Billing Schedule Line
Scheduled Quantity is calculated as an integer and adjustments to accommodate the pro-rata calcul</inlineHelpText>
    <label>Scheduled Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>