unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/SO_Line_Agency_Commission__c.field-meta.xml
<CustomField>
    <fullName>SO_Line_Agency_Commission__c</fullName>
    <description>Agency Commission as defined in the Sales Order  Line.</description>
    <inlineHelpText>Agency Commission as defined in the Sales Order  Line.</inlineHelpText>
    <label>SO Line Agency Commission</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>