unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/SO_Primary_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>SO_Primary_Sales_Person__c</fullName>
    <description>Presents the Sales Order field for Primary Sales Person</description>
    <formula>Sales_Order__r.Ad_Server_Sales_Person__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SO Primary Sales Person</label>
    <type>Text</type>
</CustomField>