unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Spotify_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Spotify_Legal_Entity__c</fullName>
    <description>Indicates the Spotify Legal Entity</description>
    <inlineHelpText>Indicates the Spotify Legal Entity</inlineHelpText>
    <label>Spotify Legal Entity</label>
    <length>10</length>
    <type>Text</type>
</CustomField>