unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Total_Billed_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed_To_Date__c</fullName>
    <description>Sum of the Total Billed values across closed records.</description>
    <formula>Billing_Schedule__r.Total_Billed_Quantity_To_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of the Total Billed values across closed records.</inlineHelpText>
    <label>Total Billed Quantity To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>