unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Under_Delivery_Reason__c.field-meta.xml
<CustomField>
    <fullName>Under_Delivery_Reason__c</fullName>
    <description>Indicates the reason why the line is under-performing.</description>
    <inlineHelpText>Indicates the reason why the line is under-performing.</inlineHelpText>
    <label>Under Delivery Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Media</fullName>
            </value>
            <value>
                <fullName>Custom Audience Segments</fullName>
            </value>
            <value>
                <fullName>Late Start - Client</fullName>
            </value>
            <value>
                <fullName>Late Start - Spotify</fullName>
            </value>
            <value>
                <fullName>Network Radio</fullName>
            </value>
            <value>
                <fullName>On Track to Deliver / Delivered in Full</fullName>
            </value>
            <value>
                <fullName>Oversold / Forecasting</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Remnant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>