unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Under_IFC__c.field-meta.xml
<CustomField>
    <fullName>Under_IFC__c</fullName>
    <formula>Billing_Schedule__r.Under_IFC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Under In Flight Change</label>
    <type>Checkbox</type>
</CustomField>