unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/Valid_for_Auto_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Valid_for_Auto_Cancellation__c</fullName>
    <description>Indicates if this line is valid to be auto-cancelled or not</description>
    <formula>NOT(ISPICKVAL(Status__c, &#39;Cancelled&#39;))
&amp;&amp; X3rd_Party_Actuals__c = 0
&amp;&amp; ISBLANK(X3rd_Party_Actuals_as_of__c)
&amp;&amp; DFP_Actuals__c = 0
&amp;&amp; ISBLANK(DFP_Actuals_as_of__c)
&amp;&amp; Exported_to_ERP__c = false 
&amp;&amp; Exported_to_Integration__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if this line is valid to be auto-cancelled or not</inlineHelpText>
    <label>Valid for Auto-Cancellation</label>
    <type>Checkbox</type>
</CustomField>