unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/X3rd_Party_Actuals_as_of__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Actuals_as_of__c</fullName>
    <description>Reference for the timestamp that the 3rd Party Actuals number relates to.</description>
    <inlineHelpText>Reference for the timestamp that the 3rd Party Actuals number relates to.</inlineHelpText>
    <label>3rd Party Actuals as of</label>
    <type>DateTime</type>
</CustomField>