unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/X3rd_Party_Actuals_Delta__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Actuals_Delta__c</fullName>
    <label>3rd Party Actuals Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>