unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/fields/X3rd_Party_Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Ad_Server__c</fullName>
    <description>3rd Party Ad Server as defined in the Sales Order Line.</description>
    <inlineHelpText>3rd Party Ad Server as defined in the Sales Order Line.</inlineHelpText>
    <label>3rd Party Ad Server</label>
    <length>255</length>
    <type>Text</type>
</CustomField>