unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/validationRules/Billing_Lock_Editing.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Lock_Editing</fullName>
    <active>false</active>
    <description>On some status no changes can be made to the Billing Schedule record</description>
    <errorConditionFormula>AND( $Setup.CS_Custom_Settings__c.Disable_Validation__c ==FALSE, (TEXT(PRIORVALUE(Status__c)) = &#39;Ready&#39; || TEXT(PRIORVALUE(Status__c)) = &#39;Closed&#39; ) &amp;&amp;
(ISCHANGED(Status__c) || ISCHANGED(Overwrite_Quantity__c)|| ISCHANGED(Manual_Hold__c)|| ISCHANGED(Under_Delivery_Reason__c)))</errorConditionFormula>
    <errorDisplayField>X3rd_Party_Actuals__c</errorDisplayField>
    <errorMessage>No changes can be made on Ready/ Pending Closure/ Closed status</errorMessage>
</ValidationRule>