unpackaged/main/default/objects/CS_Billing_Schedule_Item__c/validationRules/Manual_Reconciliation_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Manual_Reconciliation_Status_Validation</fullName>
    <active>true</active>
    <description>When a Billing Schedule is in Pending, it can only be progressed to status Ready, not to other status values.</description>
    <errorConditionFormula>AND(TEXT(PRIORVALUE(Status__c)) = &#39;Pending&#39;,
    ISCHANGED(Status__c),
    !ISPICKVAL( Status__c, &#39;Ready&#39;)
    )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>When a Billing Schedule is in Pending, it can only be progressed to status Ready, not to other status values.</errorMessage>
</ValidationRule>